--- a/index.html
+++ b/index.html
@@ -18,5 +18,6 @@
   <body>
     <img src="header.jpg" alt="">
     <img src="hero.jpg" alt="">
-  </body>
+    <img src="acustica.jpg" alt="">
+</body>
 </html>
