--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       body
       {
         margin: 0;
-      
+
       }
       img
       {
@@ -17,8 +17,6 @@
     </style>
   </head>
   <body>
-    <img src="header.jpg" alt="">
-    <img src="hero.jpg" alt="">
-    <img src="acustica.jpg" alt="">
+    <img src="nueva-version.jpg" alt="">
 </body>
 </html>
